without-flagger-books/deployment-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookapp-v3
  labels:
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookapp
      version: v3
  template:
    metadata:
      labels:
        app: bookapp
        version: v3
    spec:
      containers:
      - name: bookapp
        image: docker.io/juablazmahuerta/book-app:v3
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
          - containerPort: 9991
