without-flagger-books/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-flyway
  namespace: practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-flyway
  template:
    metadata:
      labels:
        app: db-flyway
    spec:
      containers:
      - name: book-app
        image: docker.io/mysql:8.0.22
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db-flyway
  namespace: practice

  labels:
    app: db-flyway
spec:
  ports:
  - port: 3306
    name: http
  selector:
    app: db-flyway
