without-flagger-books/deployment-v4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookapp-v4
  labels:
    version: v4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookapp
      version: v4
  template:
    metadata:
      labels:
        app: bookapp
        version: v4
    spec:
      containers:
      - name: bookapp
        image: docker.io/juablazmahuerta/book-app:v4
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
          - containerPort: 9991

---
apiVersion: v1
kind: Service
metadata:
  name: bookapp
  labels:
    app: bookapp
spec:
  ports:
  - port: 9991
    name: http
  selector:
    app: bookapp
