without-flagger-books/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: book-app

spec:
  host: book-app
  subsets:
  - name: primary
    labels:
      version: v1
  - name: canary
    labels:
      version: v2
