without-flagger-books/virtual-service-v1-to-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookapp
spec:
  hosts:
  - "*"
  gateways:
  - bookapp-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: bookapp
        subset: v1
        port:
          number: 9991
      weight: 90 # 80, 70, 60, 50
    - destination:
        host: bookapp
        subset: v2
        port:
          number: 9991
      weight: 10 # 20, 30, 40, 50
