without-flagger-books/virtual-service-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookapp
spec:
  hosts:
  - "*"
  gateways:
  - bookapp-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: bookapp
        subset: v3
        port:
          number: 9991
      weight: 100
