without-flagger-books/virtual-service-v4.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: book-app
spec:
  hosts:
  - "*"
  gateways:
  - book-app-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: book-app
        subset: v4
        port:
          number: 9991
      weight: 100
